--- a/templates/apps/info.html
+++ b/templates/apps/info.html
@@ -59,7 +59,7 @@
           </tr>
           <tr>
               <th>家賃</th>
-              <td>{{view_list.rent}}</td>
+              <td>{{view_list.rent}}万円</td>
           </tr>
           <tr>
               <th>駐車場</th>
