--- a/templates/company/test.html
+++ b/templates/company/test.html
@@ -1,4 +1,6 @@
-<form action="POST">
-  <input name="date"  type="date" min="2018-01-01" max="2018-12-31" value=""></input>
-  <input type="submit">
-</form>
+<div>
+
+  <p>
+    送信成功！！！
+  </p>
+</div>
