--- a/templates/register/password_change_done.html
+++ b/templates/register/password_change_done.html
@@ -1,7 +1,10 @@
 {% extends "register/base.html" %}
 {% block content %}
-<p>
-    パスワードを変更しました。<br>
-    <a class="btn btn-primary btn-lg" href="{% url 'register:user_detail' user.pk %}">マイページへ</a>
-</p>
+<div class='password_change_main'>
+        <p>
+            パスワードを変更しました。<br>
+            <a class="btn btn-primary btn-lg" href="{% url 'register:user_detail' user.username user.pk %}">マイページへ</a>
+        </p>
+</div>
+
 {% endblock %}
