--- a/templates/register/user_create.html
+++ b/templates/register/user_create.html
@@ -19,9 +19,10 @@
         </div>
         {% endfor %}
         {% csrf_token %}
-        <button type="submit" class="btn btn-success btn-lg btn-block mail">メール送信</button>
+        <button type="submit" class="btn btn-success btn-lg btn-block mail user_create_mail">メール送信</button>
+      </form>
       <div classs='comment'>
-        <ul class='note'>
+        <ul class='note user_create_note'>
           <li class='title'>【ご登録に関して、注意事項】</li>
           <li>※パスワードは半角英数字を8文字以上入力してください</li>
           <li>※パスワードは数字と半角文字を含めてください</li>
