--- a/templates/register/user_create_complte.html
+++ b/templates/register/user_create_complte.html
@@ -4,7 +4,7 @@
   <p>
       本登録が完了しました。<br>
       登録されたメールアドレスとパスワードでログインしてください。<br>
-      <a class="btn btn-primary btn-lg" href="{% url 'register:login' %}">ログイン</a>
+      <a class="btn btn-primary btn-lg user_create_mail" href="{% url 'register:login' %}">ログイン</a>
   </p>
 </div>
 {% endblock %}
