--- a/templates/company/base.html
+++ b/templates/company/base.html
@@ -9,7 +9,8 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <link rel="stylesheet" media="screen" href="{% static 'css/index.css' %} " />
+  <link rel="stylesheet" media="screen and (min-width: 436px)" href="{% static 'css/index.css' %} " />
+  <link rel="stylesheet" media="screen and (max-width: 435px)" href="{% static 'css/index_sp.css' %} " />
 
 
   <title>roomii</title>
