--- a/templates/register/login.html
+++ b/templates/register/login.html
@@ -13,7 +13,7 @@
                       <hr>
                   {% endfor %}
                   {{error}}
-                  <button type="submit" class="btn btn-success btn-lg btn-block" >ログイン</button>
+                  <button type="submit" class="btn btn-success btn-lg btn-block login-main-button" >ログイン</button>
                   <input type="hidden" name="next" value="{{ next }}" />
                   {% csrf_token %}
               </div>
