--- a/templates/register/password_change.html
+++ b/templates/register/password_change.html
@@ -15,7 +15,7 @@
       </div>
       {% endfor %}
       {% csrf_token %}
-      <button type="submit" class="btn btn-primary btn-lg">送信</button>
+      <button type="submit" class="btn btn-primary btn-lg pass-change-button">送信</button>
   </form>
 </div>
 {% endblock %}
