--- a/templates/register/password_reset_done.html
+++ b/templates/register/password_reset_done.html
@@ -4,9 +4,8 @@
   <p>
       パスワード再設定用のメールを送信しました。<br>
       メールに記載されているリンクから再設定を行ってください。
+      
   </p>
-  <div>
-    <a class="btn btn-primary col-4" href="/login/">ログイン画面へ</a>
-  </div>
+  <a class="btn btn-primary col-4 login-form-redirect" href="/login/">ログイン画面へ</a>
 </div>
 {% endblock %}
